Fixed alignment of 'Which one?' text

--- a/Frontend/cashflow/src/features/addAccount/styles.css
+++ b/Frontend/cashflow/src/features/addAccount/styles.css
@@ -5,9 +5,31 @@
     /*justify-content: center;*/
 }
 
-#textContainer p{
-    /*display: flex;*/
-    flex: 1;
-    text-align: center;
-    font-size: 50px;
+#mainContainer ul li{
+    margin-top: 0;
 }
+
+#textContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 40px;
+    position: absolute;
+    width: 340px;
+    height: 50px;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    text-align: center;
+    animation: pulse 2.5s infinite;
+
+    color: #ff84f9;
+    border: 3px solid #8e3191;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 1px rgb(129, 20, 178);
+    background-color: rgba(115, 0, 75, 0.76);
+    backdrop-filter: blur(10px);
+    transition: box-shadow 0.3s, width 0.5s, height 0.5s, scale 0.1s;
+}
+
+
